--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "image-utilites",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Grayscale detector",
   "license": "MIT",
   "author": "Konstantin Shevsky",
@@ -11,8 +11,9 @@
     "dist"
   ],
   "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build",
+    "build_workers": "node ./config/build-workers.js",
+    "start": "NODE_ENV=dev npm run build_workers && tsdx watch",
+    "build": "NODE_ENV=prod npm run build_workers && tsdx build",
     "test": "tsdx test --env=jsdom",
     "lint": "tsdx lint",
     "predeploy": "npm run build --prefix playground",
@@ -33,8 +34,12 @@
   "devDependencies": {
     "@types/jest": "26.0.10",
     "gh-pages": "3.1.0",
+    "terser": "5.2.1",
     "tsdx": "0.13.2",
     "tslib": "1.13.0",
     "typescript": "3.9.7"
+  },
+  "dependencies": {
+    "utils": "0.3.1"
   }
 }
