--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "rootDir": "./",
     "strict": true,
     "noImplicitAny": true,
+    "resolveJsonModule": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
     "strictPropertyInitialization": true,
